--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 # 本地开发环境配置（macOS，无代理）
 # 包含：PostgreSQL、Redis、Nginx、Flask应用
 
@@ -96,7 +94,7 @@ services:
       dockerfile: Dockerfile
       target: development
       args:
-        - BUILDKIT_INLINE_CACHE=1
+        BUILDKIT_INLINE_CACHE: 1
     image: whalefall:dev
     container_name: whalefall_app_dev
     restart: unless-stopped
