--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 # 服务器正式环境配置（x86，有代理）
 # 包含：PostgreSQL、Redis、Nginx、Flask应用
 
@@ -77,8 +75,7 @@ services:
       - ./userdata/nginx/ssl:/etc/nginx/ssl:ro
     networks:
       - whalefall_prod_network
-    depends_on:
-      - whalefall
+    # depends_on: whalefall  # 注释掉，因为whalefall在profiles中
     deploy:
       resources:
         limits:
@@ -95,11 +92,10 @@ services:
       dockerfile: Dockerfile.proxy
       target: production
       args:
-        # 代理配置
         HTTP_PROXY: ${HTTP_PROXY:-}
         HTTPS_PROXY: ${HTTPS_PROXY:-}
         NO_PROXY: ${NO_PROXY:-localhost,127.0.0.1,::1}
-        - BUILDKIT_INLINE_CACHE=1
+        BUILDKIT_INLINE_CACHE: 1
     image: whalefall:prod
     container_name: whalefall_app_prod
     restart: unless-stopped
