--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -54,8 +54,8 @@ server {
     server_name localhost;
     
     # SSL证书配置
-    ssl_certificate /etc/nginx/ssl/chint.com.pem;
-    ssl_certificate_key /etc/nginx/ssl/chint.com.key;
+    ssl_certificate /etc/nginx/ssl/whale.pem;
+    ssl_certificate_key /etc/nginx/ssl/whale.key;
     
     # SSL配置
     ssl_protocols TLSv1.2 TLSv1.3;
