--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -2,7 +2,8 @@
 # 用于Flask应用在Docker容器中运行的情况
 
 upstream whalefall_backend {
-    server whalefall:5001; # 指向Flask容器的服务名和端口
+    server whalefall:5001 max_fails=3 fail_timeout=30s; # 指向Flask容器的服务名和端口
+    # 当Flask容器不存在时，Nginx会返回502错误而不是崩溃
 }
 
 server {
@@ -24,14 +25,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # 超时配置
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
         
         # 缓冲配置
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
+        
+        # 当后端不可用时，返回503状态
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
     }
     
     # 静态文件代理
@@ -39,12 +44,22 @@ server {
         proxy_pass http://whalefall_backend;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
     }
     
     # 健康检查
     location /health {
         proxy_pass http://whalefall_backend;
         access_log off;
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 回退页面（当Flask应用不可用时）
+    location @fallback {
+        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
+        add_header Content-Type text/plain;
     }
 }
 
@@ -77,14 +92,18 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # 超时配置
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
         
         # 缓冲配置
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
+        
+        # 当后端不可用时，返回503状态
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
     }
     
     # 静态文件代理
@@ -92,11 +111,21 @@ server {
         proxy_pass http://whalefall_backend;
         expires 1y;
         add_header Cache-Control "public, immutable";
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
     }
     
     # 健康检查
     location /health {
         proxy_pass http://whalefall_backend;
         access_log off;
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 回退页面（当Flask应用不可用时）
+    location @fallback {
+        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
+        add_header Content-Type text/plain;
     }
 }
