--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -1,6 +1,13 @@
 # Nginx配置 - Docker环境
 # 用于Flask应用在Docker容器中运行的情况
 
+# 定义upstream，包含fallback机制
+upstream whalefall_backend {
+    server whalefall:5001 max_fails=3 fail_timeout=30s;
+    # 当whalefall不可用时，使用backup服务器
+    server 127.0.0.1:8080 backup;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -13,7 +20,7 @@ server {
     
     # 主应用代理
     location / {
-        proxy_pass http://whalefall:5001;
+        proxy_pass http://whalefall_backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,7 +43,7 @@ server {
     
     # 静态文件代理
     location /static/ {
-        proxy_pass http://whalefall:5001;
+        proxy_pass http://whalefall_backend;
         expires 1y;
         add_header Cache-Control "public, immutable";
         proxy_intercept_errors on;
@@ -45,7 +52,7 @@ server {
     
     # 健康检查
     location /health {
-        proxy_pass http://whalefall:5001;
+        proxy_pass http://whalefall_backend;
         access_log off;
         proxy_intercept_errors on;
         error_page 502 503 504 = @fallback;
@@ -58,70 +65,69 @@ server {
     }
 }
 
-# HTTPS配置（需要SSL证书文件存在时才启用）
-# 当你有SSL证书时，取消注释下面的配置
-# server {
-#     listen 443 ssl http2;
-#     server_name localhost;
-#     
-#     # SSL证书配置
-#     ssl_certificate /etc/nginx/ssl/whale.pem;
-#     ssl_certificate_key /etc/nginx/ssl/whale.key;
-#     
-#     # SSL配置
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-#     ssl_prefer_server_ciphers off;
-#     
-#     client_max_body_size 16M;
-#     
-#     # 日志配置
-#     access_log /var/log/nginx/ssl_access.log;
-#     error_log /var/log/nginx/ssl_error.log;
-#     
-#     # 主应用代理
-#     location / {
-#         proxy_pass http://whalefall:5001;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#         
-#         # 超时配置
-#         proxy_connect_timeout 5s;
-#         proxy_send_timeout 5s;
-#         proxy_read_timeout 5s;
-#         
-#         # 缓冲配置
-#         proxy_buffering on;
-#         proxy_buffer_size 4k;
-#         proxy_buffers 8 4k;
-#         
-#         # 当后端不可用时，返回503状态
-#         proxy_intercept_errors on;
-#         error_page 502 503 504 = @fallback;
-#     }
-#     
-#     # 静态文件代理
-#     location /static/ {
-#         proxy_pass http://whalefall:5001;
-#         expires 1y;
-#         add_header Cache-Control "public, immutable";
-#         proxy_intercept_errors on;
-#         error_page 502 503 504 = @fallback;
-#     }
-#     
-#     # 健康检查
-#     location /health {
-#         proxy_pass http://whalefall:5001;
-#         access_log off;
-#         proxy_intercept_errors on;
-#         error_page 502 503 504 = @fallback;
-#     }
-#     
-#     # 回退页面（当Flask应用不可用时）
-#     location @fallback {
-#         return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
-#         add_header Content-Type text/plain;
-#     }
-# }
+# HTTPS配置
+server {
+    listen 443 ssl http2;
+    server_name localhost;
+    
+    # SSL证书配置
+    ssl_certificate /etc/nginx/ssl/whale.pem;
+    ssl_certificate_key /etc/nginx/ssl/whale.key;
+    
+    # SSL配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    
+    client_max_body_size 16M;
+    
+    # 日志配置
+    access_log /var/log/nginx/ssl_access.log;
+    error_log /var/log/nginx/ssl_error.log;
+    
+    # 主应用代理
+    location / {
+        proxy_pass http://whalefall_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 超时配置
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
+        
+        # 缓冲配置
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
+        
+        # 当后端不可用时，返回503状态
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 静态文件代理
+    location /static/ {
+        proxy_pass http://whalefall_backend;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 健康检查
+    location /health {
+        proxy_pass http://whalefall_backend;
+        access_log off;
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+    }
+    
+    # 回退页面（当Flask应用不可用时）
+    location @fallback {
+        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
+        add_header Content-Type text/plain;
+    }
+}
