--- a/Dockerfile.proxy
+++ b/Dockerfile.proxy
@@ -1,6 +1,5 @@
 # 支持代理的Dockerfile
-FROM registry.cn-hangzhou.aliyuncs.com/library/ubuntu:22.04 as base
-
+FROM ubuntu:22.04 as base
 # 设置环境变量
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
