--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "pyodbc>=5.0.1",
     "flask-bcrypt>=1.0.1",
     "gunicorn>=21.2.0",
+    "gevent>=1.4.0",
     "loguru>=0.7.3",
     "structlog>=25.4.0",
     "psycopg[binary]>=3.2.10",
