--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -73,6 +73,7 @@ services:
       - ./nginx/conf.d/whalefall-docker.conf:/etc/nginx/conf.d/default.conf:ro
       - ./userdata/nginx/logs:/var/log/nginx
       - ./userdata/nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/error_pages:/etc/nginx/error_pages:ro
     networks:
       - whalefall_prod_network
     # depends_on: whalefall  # 注释掉，因为whalefall在profiles中
