--- a/nginx/conf.d/whalefall-docker.conf
+++ b/nginx/conf.d/whalefall-docker.conf
@@ -60,8 +60,22 @@ server {
     
     # 回退页面（当Flask应用不可用时）
     location @fallback {
-        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
-        add_header Content-Type text/plain;
+        root /etc/nginx/error_pages;
+        try_files /50x.html =503;
+    }
+    
+    # 自定义错误页面
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        root /etc/nginx/error_pages;
+        internal;
+    }
+    
+    location = /50x.html {
+        root /etc/nginx/error_pages;
+        internal;
     }
 }
 
@@ -128,7 +142,21 @@ server {
     
     # 回退页面（当Flask应用不可用时）
     location @fallback {
-        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
-        add_header Content-Type text/plain;
+        root /etc/nginx/error_pages;
+        try_files /50x.html =503;
+    }
+    
+    # 自定义错误页面
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /404.html {
+        root /etc/nginx/error_pages;
+        internal;
+    }
+    
+    location = /50x.html {
+        root /etc/nginx/error_pages;
+        internal;
     }
 }
