--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -75,18 +75,21 @@ services:
 
   # Nginx反向代理
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: whalefall_nginx_dev
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - whalefall_nginx_logs:/var/log/nginx
       - whalefall_nginx_ssl:/etc/nginx/ssl
     networks:
       - whalefall_dev_network
+    environment:
+      - NGINX_ENV=dev
     # 基础环境中不依赖whalefall服务
     # depends_on:
     #   - whalefall
