--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,18 +75,21 @@ services:
 
   # Nginx反向代理
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     container_name: whalefall_nginx_prod
     restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - whalefall_nginx_logs:/var/log/nginx
       - whalefall_nginx_ssl:/etc/nginx/ssl
     networks:
       - whalefall_prod_network
+    environment:
+      - NGINX_ENV=prod
     # depends_on: whalefall  # 注释掉，因为whalefall在profiles中
     deploy:
       resources:
